circt-bc260128-00000bec/reproduce.log
<stdin>:3:10: error: failed to legalize operation 'sim.fmt.literal'
    %0 = sim.fmt.literal "Error: Assertion failed: q_reg != 0"
         ^
<stdin>:3:10: note: see current operation: %30 = "sim.fmt.literal"() <{literal = "Error: Assertion failed: q_reg != 0"}> : () -> !sim.fstring
